fixed the positioning of the images inside the container div, and the overflow

--- a/src/style.css
+++ b/src/style.css
@@ -9,18 +9,29 @@ body{
 .container{
     display: flex;
     justify-content: space-around;
-    width: 50%;
+    align-items: center;
+    width: 700px;
     height: 50%;
     border-style: solid;
+    position: relative;
+    overflow: hidden;
 }
 .slider{
-    flex: 1;
-    
+    width: 100%;
+    height: 100%;
     display: flex;
-    overflow: hidden;
-    position: relative;
+    position: absolute;
+}
+.previous{
+position: absolute;
+left: 0px;
+}
+.next{
+    position: absolute;
+    right: 0px;
 }
 img{
-    
+    width: 100%;
+    height:100%;
     
 }
